Fix gallery modal content alignment (#44)
* Add common style fix for ekko-lightbox and bootstrap 4's modal-footer
class conflict.

[Fixes #151326182]

--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -170,15 +170,6 @@ img.smallSpeciesImage {
     font-weight: 700;
 }
 
-/* TODO: Move to commons */
-.ekko-lightbox .modal-footer {
-    display: block;
-}
-
-.ekko-lightbox .modal-content {
-    text-align: center;
-}
-
 /* TODO: Move facet styling to commons */
 .facet {
 }
